# cli-banking-app

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
src/: __init__.py  cli.py
src/bank/: __init__.py  account.py  exceptions.py  manager.py
tests/: conftest.py  test_account.py  test_manager.py
